# label-approved

./: Dockerfile  README.md  action.yml  flake.nix  pyproject.toml
.github/workflows/: test.yml
src/label_approved/: cli.py
